@@ -246,30 +246,35 @@ gint utils_write_file(const gchar *filename, const gchar *text)
 	{
 		FILE *fp;
 		gint bytes_written, len;
+		gboolean fail = FALSE;
 
 		if (filename == NULL)
 			return ENOENT;
 
 		len = strlen(text);
+		errno = 0;
 		fp = g_fopen(filename, "w");
-		if (fp != NULL)
+		if (fp == NULL)
+			fail = TRUE;
+		else
 		{
-			bytes_written = fwrite(text, sizeof (gchar), len, fp);
-			fclose(fp);
+			bytes_written = fwrite(text, sizeof(gchar), len, fp);
 
 			if (len != bytes_written)
 			{
+				fail = TRUE;
 				geany_debug(
 					"utils_write_file(): written only %d bytes, had to write %d bytes to %s",
 					bytes_written, len, filename);
-				return EIO;
 			}
+			if (fclose(fp) != 0)
+				fail = TRUE;
 		}
-		else
+		if (fail)
 		{
 			geany_debug("utils_write_file(): could not write to file %s (%s)",
 				filename, g_strerror(errno));
-			return errno;
+			return NVL(errno, EIO);
 		}
 	}
 	return 0;
